Final changes before presentation